--- a/wp-content/themes/flieber/base/global.css
+++ b/wp-content/themes/flieber/base/global.css
@@ -1,38 +1,3 @@
-@font-face {
-  font-family: "Trebuchet MS";
-  src: url("fonts/TrebuchetMS-Bold.eot");
-  src: local("Trebuchet MS Bold"), local("TrebuchetMS-Bold"), url("fonts/TrebuchetMS-Bold.eot?#iefix") format("embedded-opentype"), url("fonts/TrebuchetMS-Bold.woff2") format("woff2"), url("fonts/TrebuchetMS-Bold.woff") format("woff"), url("fonts/TrebuchetMS-Bold.ttf") format("truetype"), url("fonts/TrebuchetMS-Bold.svg#TrebuchetMS-Bold") format("svg");
-  font-weight: bold;
-  font-style: normal; }
-
-@font-face {
-  font-family: "Trebuchet MS";
-  src: url("fonts/TrebuchetMS-Italic.eot");
-  src: local("Trebuchet MS Italic"), local("TrebuchetMS-Italic"), url("fonts/TrebuchetMS-Italic.eot?#iefix") format("embedded-opentype"), url("fonts/TrebuchetMS-Italic.woff2") format("woff2"), url("fonts/TrebuchetMS-Italic.woff") format("woff"), url("fonts/TrebuchetMS-Italic.ttf") format("truetype"), url("fonts/TrebuchetMS-Italic.svg#TrebuchetMS-Italic") format("svg");
-  font-weight: normal;
-  font-style: italic; }
-
-@font-face {
-  font-family: "Keep Calm Med";
-  src: url("fonts/KeepCalm-Medium.eot");
-  src: local("Keep Calm Medium"), local("KeepCalm-Medium"), url("fonts/KeepCalm-Medium.eot?#iefix") format("embedded-opentype"), url("fonts/KeepCalm-Medium.woff2") format("woff2"), url("fonts/KeepCalm-Medium.woff") format("woff"), url("fonts/KeepCalm-Medium.ttf") format("truetype"), url("fonts/KeepCalm-Medium.svg#KeepCalm-Medium") format("svg");
-  font-weight: 500;
-  font-style: normal; }
-
-@font-face {
-  font-family: "Trebuchet MS";
-  src: url("fonts/TrebuchetMS.eot");
-  src: local("Trebuchet MS"), local("TrebuchetMS"), url("fonts/TrebuchetMS.eot?#iefix") format("embedded-opentype"), url("fonts/TrebuchetMS.woff2") format("woff2"), url("fonts/TrebuchetMS.woff") format("woff"), url("fonts/TrebuchetMS.ttf") format("truetype"), url("fonts/TrebuchetMS.svg#TrebuchetMS") format("svg");
-  font-weight: normal;
-  font-style: normal; }
-
-@font-face {
-  font-family: "Trebuchet MS";
-  src: url("fonts/Trebuchet-BoldItalic.eot");
-  src: local("Trebuchet MS Bold Italic"), local("Trebuchet-BoldItalic"), url("fonts/Trebuchet-BoldItalic.eot?#iefix") format("embedded-opentype"), url("fonts/Trebuchet-BoldItalic.woff2") format("woff2"), url("fonts/Trebuchet-BoldItalic.woff") format("woff"), url("fonts/Trebuchet-BoldItalic.ttf") format("truetype"), url("fonts/Trebuchet-BoldItalic.svg#Trebuchet-BoldItalic") format("svg");
-  font-weight: bold;
-  font-style: italic; }
-
 /*! normalize.css v4.1.1 | MIT License | github.com/necolas/normalize.css */
 /**
  * 1. Change the default font family in all browsers (opinionated).
@@ -470,86 +435,4 @@ ul {
 button {
   cursor: pointer; }
 
-.container {
-  margin: 0 auto;
-  max-width: 1740px;
-  padding: 0 10px;
-  width: 100%; }
-
-header {
-  padding: 15px 0; }
-  header .content {
-    -webkit-box-align: center;
-            align-items: center;
-    display: -webkit-box;
-    -js-display: flex;
-    display: flex;
-    -webkit-box-pack: justify;
-            justify-content: space-between; }
-  header nav ul {
-    -webkit-box-align: center;
-            align-items: center;
-    display: -webkit-box;
-    -js-display: flex;
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0; }
-  header nav li {
-    margin: 0 25px; }
-  header nav a {
-    color: #19254f;
-    font-size: 18px; }
-    header nav a.feature {
-      background: #19254f;
-      border-radius: 50px;
-      color: #fff;
-      display: block;
-      font-size: 18px;
-      font-weight: bold;
-      line-height: 18px;
-      padding: 20px 40px;
-      text-transform: uppercase; }
-    header nav a:hover {
-      text-decoration: underline; }
-
-.address {
-  -webkit-box-align: center;
-          align-items: center;
-  background: #2ea6d0 url("images/mapa-bg.png") center center no-repeat;
-  display: -webkit-box;
-  -js-display: flex;
-  display: flex;
-  height: 417px; }
-  .address .content {
-    -webkit-box-align: center;
-            align-items: center;
-    display: -webkit-box;
-    -js-display: flex;
-    display: flex;
-    justify-content: space-around; }
-    .address .content p {
-      color: #fff;
-      font-size: 16px;
-      text-align: center; }
-
-footer {
-  padding: 100px 0; }
-  footer .content {
-    -webkit-box-align: center;
-            align-items: center;
-    display: -webkit-box;
-    -js-display: flex;
-    display: flex;
-    -webkit-box-pack: justify;
-            justify-content: space-between; }
-  footer .text {
-    color: #19254f; }
-  footer .social {
-    display: -webkit-box;
-    -js-display: flex;
-    display: flex; }
-    footer .social i {
-      margin: 0 10px; }
-
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=global.css.map */
