--- a/wp-content/themes/flieber/src/styles/base/_fonts.scss
+++ b/wp-content/themes/flieber/src/styles/base/_fonts.scss
@@ -5,47 +5,69 @@
 //------------------------------------
 
 @font-face {
-	font-family: 'proximanova-light';
-	font-style: normal;
-	font-weight: normal;
-	src: url('fonts/proximanova-light.eot'),
-		 url('fonts/proximanova-light.eot?#iefix') format('embedded-opentype'),
-		 url('fonts/proximanova-light.woff2') format('woff2'),
-		 url('fonts/proximanova-light.woff') format('woff'),
-		 url('fonts/proximanova-light.ttf') format('truetype'),
-		 url('fonts/proximanova-light.svg#proximanova-light') format('svg');
+  font-family: "Trebuchet MS";
+  src: url("fonts/TrebuchetMS-Bold.eot");
+  src: local("Trebuchet MS Bold"), local("TrebuchetMS-Bold"),
+    url("fonts/TrebuchetMS-Bold.eot?#iefix") format("embedded-opentype"),
+    url("fonts/TrebuchetMS-Bold.woff2") format("woff2"),
+    url("fonts/TrebuchetMS-Bold.woff") format("woff"),
+    url("fonts/TrebuchetMS-Bold.ttf") format("truetype"),
+    url("fonts/TrebuchetMS-Bold.svg#TrebuchetMS-Bold") format("svg");
+  font-weight: bold;
+  font-style: normal;
 }
 
 @font-face {
-	font-family: 'proximanova-regular';
-	font-style: normal;
-	font-weight: normal;
-	src: url('fonts/proximanova-regular.eot'),
-		 url('fonts/proximanova-regular.eot?#iefix') format('embedded-opentype'),
-		 url('fonts/proximanova-regular.woff2') format('woff2'),
-		 url('fonts/proximanova-regular.woff') format('woff'),
-		 url('fonts/proximanova-regular.ttf') format('truetype'),
-		 url('fonts/proximanova-regular.svg#proximanova-regular') format('svg');
+  font-family: "Trebuchet MS";
+  src: url("fonts/TrebuchetMS-Italic.eot");
+  src: local("Trebuchet MS Italic"), local("TrebuchetMS-Italic"),
+    url("fonts/TrebuchetMS-Italic.eot?#iefix") format("embedded-opentype"),
+    url("fonts/TrebuchetMS-Italic.woff2") format("woff2"),
+    url("fonts/TrebuchetMS-Italic.woff") format("woff"),
+    url("fonts/TrebuchetMS-Italic.ttf") format("truetype"),
+    url("fonts/TrebuchetMS-Italic.svg#TrebuchetMS-Italic") format("svg");
+  font-weight: normal;
+  font-style: italic;
 }
 
 @font-face {
-	font-family: 'proximanova-bold';
-	font-style: normal;
-	font-weight: 700;
-	src: url('fonts/proximanova-bold.eot'),
-		 url('fonts/proximanova-bold.eot?#iefix') format('embedded-opentype'),
-		 url('fonts/proximanova-bold.woff2') format('woff2'),
-		 url('fonts/proximanova-bold.woff') format('woff'),
-		 url('fonts/proximanova-bold.ttf') format('truetype'),
-		 url('fonts/proximanova-bold.svg#proximanova-bold') format('svg');
+  font-family: "Keep Calm Med";
+  src: url("fonts/KeepCalm-Medium.eot");
+  src: local("Keep Calm Medium"), local("KeepCalm-Medium"),
+    url("fonts/KeepCalm-Medium.eot?#iefix") format("embedded-opentype"),
+    url("fonts/KeepCalm-Medium.woff2") format("woff2"),
+    url("fonts/KeepCalm-Medium.woff") format("woff"),
+    url("fonts/KeepCalm-Medium.ttf") format("truetype"),
+    url("fonts/KeepCalm-Medium.svg#KeepCalm-Medium") format("svg");
+  font-weight: 500;
+  font-style: normal;
 }
 
-$proximanova-light: 'proximanova-light', 'Helvetica Neue', Arial, sans-serif !default;
-$proximanova-regular: 'proximanova-regular', 'Helvetica Neue', Arial, sans-serif !default;
-$proximanova-bold:  'proximanova-bold', 'Helvetica Neue', Arial, sans-serif !default;
+@font-face {
+  font-family: "Trebuchet MS";
+  src: url("fonts/TrebuchetMS.eot");
+  src: local("Trebuchet MS"), local("TrebuchetMS"),
+    url("fonts/TrebuchetMS.eot?#iefix") format("embedded-opentype"),
+    url("fonts/TrebuchetMS.woff2") format("woff2"),
+    url("fonts/TrebuchetMS.woff") format("woff"),
+    url("fonts/TrebuchetMS.ttf") format("truetype"),
+    url("fonts/TrebuchetMS.svg#TrebuchetMS") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
 
+@font-face {
+  font-family: "Trebuchet MS";
+  src: url("fonts/Trebuchet-BoldItalic.eot");
+  src: local("Trebuchet MS Bold Italic"), local("Trebuchet-BoldItalic"),
+    url("fonts/Trebuchet-BoldItalic.eot?#iefix") format("embedded-opentype"),
+    url("fonts/Trebuchet-BoldItalic.woff2") format("woff2"),
+    url("fonts/Trebuchet-BoldItalic.woff") format("woff"),
+    url("fonts/Trebuchet-BoldItalic.ttf") format("truetype"),
+    url("fonts/Trebuchet-BoldItalic.svg#Trebuchet-BoldItalic") format("svg");
+  font-weight: bold;
+  font-style: italic;
+}
 
-// Base font-family
-$base-font-family         : $proximanova-light;
-$base-print-font-family   : Georgia, 'Times New Roman', Times, serif !default;
-
+$base-font: "Trebuchet MS", "Helvetica Neue", Arial, sans-serif !default;
+$second-font: "Keep Calm Med", "Helvetica Neue", Arial, sans-serif !default;
