--- a/wp-content/themes/flieber/src/styles/components/header.scss
+++ b/wp-content/themes/flieber/src/styles/components/header.scss
@@ -9,6 +9,10 @@ header {
     justify-content: space-between;
   }
 
+  .logo {
+    width: 200px;
+  }
+
   nav {
     ul {
       align-items: center;
