--- a/wp-content/themes/flieber/style.css
+++ b/wp-content/themes/flieber/style.css
@@ -1,37 +1,37 @@
 @font-face {
   font-family: "Trebuchet MS";
-  src: url("fonts/TrebuchetMS-Bold.eot");
-  src: local("Trebuchet MS Bold"), local("TrebuchetMS-Bold"), url("fonts/TrebuchetMS-Bold.eot?#iefix") format("embedded-opentype"), url("fonts/TrebuchetMS-Bold.woff2") format("woff2"), url("fonts/TrebuchetMS-Bold.woff") format("woff"), url("fonts/TrebuchetMS-Bold.ttf") format("truetype"), url("fonts/TrebuchetMS-Bold.svg#TrebuchetMS-Bold") format("svg");
+  font-style: normal;
   font-weight: bold;
-  font-style: normal; }
+  src: url("fonts/TrebuchetMS-Bold.eot");
+  src: local("Trebuchet MS Bold"), local("TrebuchetMS-Bold"), url("fonts/TrebuchetMS-Bold.eot?#iefix") format("embedded-opentype"), url("fonts/TrebuchetMS-Bold.woff2") format("woff2"), url("fonts/TrebuchetMS-Bold.woff") format("woff"), url("fonts/TrebuchetMS-Bold.ttf") format("truetype"), url("fonts/TrebuchetMS-Bold.svg#TrebuchetMS-Bold") format("svg"); }
 
 @font-face {
   font-family: "Trebuchet MS";
-  src: url("fonts/TrebuchetMS-Italic.eot");
-  src: local("Trebuchet MS Italic"), local("TrebuchetMS-Italic"), url("fonts/TrebuchetMS-Italic.eot?#iefix") format("embedded-opentype"), url("fonts/TrebuchetMS-Italic.woff2") format("woff2"), url("fonts/TrebuchetMS-Italic.woff") format("woff"), url("fonts/TrebuchetMS-Italic.ttf") format("truetype"), url("fonts/TrebuchetMS-Italic.svg#TrebuchetMS-Italic") format("svg");
+  font-style: italic;
   font-weight: normal;
-  font-style: italic; }
+  src: url("fonts/TrebuchetMS-Italic.eot");
+  src: local("Trebuchet MS Italic"), local("TrebuchetMS-Italic"), url("fonts/TrebuchetMS-Italic.eot?#iefix") format("embedded-opentype"), url("fonts/TrebuchetMS-Italic.woff2") format("woff2"), url("fonts/TrebuchetMS-Italic.woff") format("woff"), url("fonts/TrebuchetMS-Italic.ttf") format("truetype"), url("fonts/TrebuchetMS-Italic.svg#TrebuchetMS-Italic") format("svg"); }
 
 @font-face {
   font-family: "Keep Calm Med";
-  src: url("fonts/KeepCalm-Medium.eot");
-  src: local("Keep Calm Medium"), local("KeepCalm-Medium"), url("fonts/KeepCalm-Medium.eot?#iefix") format("embedded-opentype"), url("fonts/KeepCalm-Medium.woff2") format("woff2"), url("fonts/KeepCalm-Medium.woff") format("woff"), url("fonts/KeepCalm-Medium.ttf") format("truetype"), url("fonts/KeepCalm-Medium.svg#KeepCalm-Medium") format("svg");
+  font-style: normal;
   font-weight: 500;
-  font-style: normal; }
+  src: url("fonts/KeepCalm-Medium.eot");
+  src: local("Keep Calm Medium"), local("KeepCalm-Medium"), url("fonts/KeepCalm-Medium.eot?#iefix") format("embedded-opentype"), url("fonts/KeepCalm-Medium.woff2") format("woff2"), url("fonts/KeepCalm-Medium.woff") format("woff"), url("fonts/KeepCalm-Medium.ttf") format("truetype"), url("fonts/KeepCalm-Medium.svg#KeepCalm-Medium") format("svg"); }
 
 @font-face {
   font-family: "Trebuchet MS";
-  src: url("fonts/TrebuchetMS.eot");
-  src: local("Trebuchet MS"), local("TrebuchetMS"), url("fonts/TrebuchetMS.eot?#iefix") format("embedded-opentype"), url("fonts/TrebuchetMS.woff2") format("woff2"), url("fonts/TrebuchetMS.woff") format("woff"), url("fonts/TrebuchetMS.ttf") format("truetype"), url("fonts/TrebuchetMS.svg#TrebuchetMS") format("svg");
+  font-style: normal;
   font-weight: normal;
-  font-style: normal; }
+  src: url("fonts/TrebuchetMS.eot");
+  src: local("Trebuchet MS"), local("TrebuchetMS"), url("fonts/TrebuchetMS.eot?#iefix") format("embedded-opentype"), url("fonts/TrebuchetMS.woff2") format("woff2"), url("fonts/TrebuchetMS.woff") format("woff"), url("fonts/TrebuchetMS.ttf") format("truetype"), url("fonts/TrebuchetMS.svg#TrebuchetMS") format("svg"); }
 
 @font-face {
   font-family: "Trebuchet MS";
-  src: url("fonts/Trebuchet-BoldItalic.eot");
-  src: local("Trebuchet MS Bold Italic"), local("Trebuchet-BoldItalic"), url("fonts/Trebuchet-BoldItalic.eot?#iefix") format("embedded-opentype"), url("fonts/Trebuchet-BoldItalic.woff2") format("woff2"), url("fonts/Trebuchet-BoldItalic.woff") format("woff"), url("fonts/Trebuchet-BoldItalic.ttf") format("truetype"), url("fonts/Trebuchet-BoldItalic.svg#Trebuchet-BoldItalic") format("svg");
+  font-style: italic;
   font-weight: bold;
-  font-style: italic; }
+  src: url("fonts/Trebuchet-BoldItalic.eot");
+  src: local("Trebuchet MS Bold Italic"), local("Trebuchet-BoldItalic"), url("fonts/Trebuchet-BoldItalic.eot?#iefix") format("embedded-opentype"), url("fonts/Trebuchet-BoldItalic.woff2") format("woff2"), url("fonts/Trebuchet-BoldItalic.woff") format("woff"), url("fonts/Trebuchet-BoldItalic.ttf") format("truetype"), url("fonts/Trebuchet-BoldItalic.svg#Trebuchet-BoldItalic") format("svg"); }
 
 /*! normalize.css v4.1.1 | MIT License | github.com/necolas/normalize.css */
 /**
@@ -406,38 +406,38 @@ textarea {
 
 @font-face {
   font-family: "Trebuchet MS";
-  src: url("fonts/TrebuchetMS-Bold.eot");
-  src: local("Trebuchet MS Bold"), local("TrebuchetMS-Bold"), url("fonts/TrebuchetMS-Bold.eot?#iefix") format("embedded-opentype"), url("fonts/TrebuchetMS-Bold.woff2") format("woff2"), url("fonts/TrebuchetMS-Bold.woff") format("woff"), url("fonts/TrebuchetMS-Bold.ttf") format("truetype"), url("fonts/TrebuchetMS-Bold.svg#TrebuchetMS-Bold") format("svg");
+  font-style: normal;
   font-weight: bold;
-  font-style: normal; }
+  src: url("fonts/TrebuchetMS-Bold.eot");
+  src: local("Trebuchet MS Bold"), local("TrebuchetMS-Bold"), url("fonts/TrebuchetMS-Bold.eot?#iefix") format("embedded-opentype"), url("fonts/TrebuchetMS-Bold.woff2") format("woff2"), url("fonts/TrebuchetMS-Bold.woff") format("woff"), url("fonts/TrebuchetMS-Bold.ttf") format("truetype"), url("fonts/TrebuchetMS-Bold.svg#TrebuchetMS-Bold") format("svg"); }
 
 @font-face {
   font-family: "Trebuchet MS";
-  src: url("fonts/TrebuchetMS-Italic.eot");
-  src: local("Trebuchet MS Italic"), local("TrebuchetMS-Italic"), url("fonts/TrebuchetMS-Italic.eot?#iefix") format("embedded-opentype"), url("fonts/TrebuchetMS-Italic.woff2") format("woff2"), url("fonts/TrebuchetMS-Italic.woff") format("woff"), url("fonts/TrebuchetMS-Italic.ttf") format("truetype"), url("fonts/TrebuchetMS-Italic.svg#TrebuchetMS-Italic") format("svg");
+  font-style: italic;
   font-weight: normal;
-  font-style: italic; }
+  src: url("fonts/TrebuchetMS-Italic.eot");
+  src: local("Trebuchet MS Italic"), local("TrebuchetMS-Italic"), url("fonts/TrebuchetMS-Italic.eot?#iefix") format("embedded-opentype"), url("fonts/TrebuchetMS-Italic.woff2") format("woff2"), url("fonts/TrebuchetMS-Italic.woff") format("woff"), url("fonts/TrebuchetMS-Italic.ttf") format("truetype"), url("fonts/TrebuchetMS-Italic.svg#TrebuchetMS-Italic") format("svg"); }
 
 @font-face {
   font-family: "Keep Calm Med";
-  src: url("fonts/KeepCalm-Medium.eot");
-  src: local("Keep Calm Medium"), local("KeepCalm-Medium"), url("fonts/KeepCalm-Medium.eot?#iefix") format("embedded-opentype"), url("fonts/KeepCalm-Medium.woff2") format("woff2"), url("fonts/KeepCalm-Medium.woff") format("woff"), url("fonts/KeepCalm-Medium.ttf") format("truetype"), url("fonts/KeepCalm-Medium.svg#KeepCalm-Medium") format("svg");
+  font-style: normal;
   font-weight: 500;
-  font-style: normal; }
+  src: url("fonts/KeepCalm-Medium.eot");
+  src: local("Keep Calm Medium"), local("KeepCalm-Medium"), url("fonts/KeepCalm-Medium.eot?#iefix") format("embedded-opentype"), url("fonts/KeepCalm-Medium.woff2") format("woff2"), url("fonts/KeepCalm-Medium.woff") format("woff"), url("fonts/KeepCalm-Medium.ttf") format("truetype"), url("fonts/KeepCalm-Medium.svg#KeepCalm-Medium") format("svg"); }
 
 @font-face {
   font-family: "Trebuchet MS";
-  src: url("fonts/TrebuchetMS.eot");
-  src: local("Trebuchet MS"), local("TrebuchetMS"), url("fonts/TrebuchetMS.eot?#iefix") format("embedded-opentype"), url("fonts/TrebuchetMS.woff2") format("woff2"), url("fonts/TrebuchetMS.woff") format("woff"), url("fonts/TrebuchetMS.ttf") format("truetype"), url("fonts/TrebuchetMS.svg#TrebuchetMS") format("svg");
+  font-style: normal;
   font-weight: normal;
-  font-style: normal; }
+  src: url("fonts/TrebuchetMS.eot");
+  src: local("Trebuchet MS"), local("TrebuchetMS"), url("fonts/TrebuchetMS.eot?#iefix") format("embedded-opentype"), url("fonts/TrebuchetMS.woff2") format("woff2"), url("fonts/TrebuchetMS.woff") format("woff"), url("fonts/TrebuchetMS.ttf") format("truetype"), url("fonts/TrebuchetMS.svg#TrebuchetMS") format("svg"); }
 
 @font-face {
   font-family: "Trebuchet MS";
-  src: url("fonts/Trebuchet-BoldItalic.eot");
-  src: local("Trebuchet MS Bold Italic"), local("Trebuchet-BoldItalic"), url("fonts/Trebuchet-BoldItalic.eot?#iefix") format("embedded-opentype"), url("fonts/Trebuchet-BoldItalic.woff2") format("woff2"), url("fonts/Trebuchet-BoldItalic.woff") format("woff"), url("fonts/Trebuchet-BoldItalic.ttf") format("truetype"), url("fonts/Trebuchet-BoldItalic.svg#Trebuchet-BoldItalic") format("svg");
+  font-style: italic;
   font-weight: bold;
-  font-style: italic; }
+  src: url("fonts/Trebuchet-BoldItalic.eot");
+  src: local("Trebuchet MS Bold Italic"), local("Trebuchet-BoldItalic"), url("fonts/Trebuchet-BoldItalic.eot?#iefix") format("embedded-opentype"), url("fonts/Trebuchet-BoldItalic.woff2") format("woff2"), url("fonts/Trebuchet-BoldItalic.woff") format("woff"), url("fonts/Trebuchet-BoldItalic.ttf") format("truetype"), url("fonts/Trebuchet-BoldItalic.svg#Trebuchet-BoldItalic") format("svg"); }
 
 * {
   box-sizing: border-box;
@@ -486,6 +486,8 @@ header {
     display: flex;
     -webkit-box-pack: justify;
             justify-content: space-between; }
+  header .logo {
+    width: 200px; }
   header nav ul {
     -webkit-box-align: center;
             align-items: center;
@@ -538,18 +540,78 @@ footer {
   footer .content {
     -webkit-box-align: center;
             align-items: center;
-    display: -webkit-box;
-    -js-display: flex;
-    display: flex;
+    display: grid;
+    grid-auto-flow: column;
     -webkit-box-pack: justify;
             justify-content: space-between; }
+  footer .logo {
+    width: 150px; }
   footer .text {
     color: #19254f; }
   footer .social {
     display: -webkit-box;
     -js-display: flex;
     display: flex; }
-    footer .social i {
+    footer .social a {
       margin: 0 10px; }
+    footer .social img {
+      width: 25px; }
+
+.advantages {
+  padding-top: 100px;
+  background: -webkit-gradient(linear, right bottom, left top, from(#fff), color-stop(50%, #fff), color-stop(50%, #273042), to(#273042));
+  background: linear-gradient(to top left, #fff 0%, #fff 50%, #273042 50%, #273042 100%); }
+  .advantages .container {
+    max-width: 1200px; }
+  .advantages h2 {
+    color: #2ea6d0;
+    font-size: 34px; }
+  .advantages .text {
+    color: #fff;
+    font-size: 20px;
+    line-height: 32px;
+    margin-bottom: 55px;
+    max-width: 55%; }
+  .advantages .content {
+    -webkit-box-align: stretch;
+            align-items: stretch;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 50px; }
+  .advantages .box {
+    background: #fff;
+    box-shadow: 0px 50px 35px -25px rgba(0, 0, 0, 0.5);
+    padding: 30px 35px;
+    text-align: center; }
+    .advantages .box img {
+      margin-bottom: 15px; }
+    .advantages .box h3 {
+      color: #2ea6d0;
+      font-size: 36px;
+      margin-bottom: 15px; }
+    .advantages .box p {
+      color: #858a8f;
+      font-size: 20px; }
+  .advantages .button {
+    background: #19254f;
+    border-radius: 50px;
+    color: #fff;
+    display: block;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 18px;
+    margin: 150px auto 50px;
+    padding: 20px 40px;
+    text-transform: uppercase; }
+
+.marcas {
+  padding: 100px 0; }
+  .marcas .content {
+    -webkit-box-align: center;
+            align-items: center;
+    display: -webkit-box;
+    -js-display: flex;
+    display: flex;
+    justify-content: space-around; }
 
 /*# sourceMappingURL=style.css.map */
