--- a/wp-content/themes/flieber/src/styles/pages/home.scss
+++ b/wp-content/themes/flieber/src/styles/pages/home.scss
@@ -1,5 +1,109 @@
 @charset 'UTF-8';
 
+@import "slick-carousel/slick/slick.scss";
+
+section.feature {
+  background: $secondary-color;
+  height: 100vh;
+  max-height: 100%;
+  padding-top: 70px;
+
+  .container {
+    height: 100%;
+  }
+
+  .content {
+    align-items: center;
+    display: grid;
+    grid-template-columns: 40% 60%;
+    height: 100%;
+  }
+
+  .slider-nav {
+    h2 {
+      color: $primary-color;
+      font-family: $second-font;
+      font-size: 35px;
+      line-height: 44px;
+      margin-bottom: 20px;
+    }
+
+    p {
+      color: #fff;
+      font-size: 22px;
+      line-height: 30px;
+      margin-bottom: 20px;
+    }
+
+    button {
+      background: #19254f;
+      border: 0;
+      border-radius: 50px;
+      color: #fff;
+      display: block;
+      font-size: 16px;
+      font-weight: bold;
+      padding: 15px 30px;
+      text-transform: uppercase;
+    }
+  }
+
+  .slider-mask {
+    align-items: flex-end;
+    background: transparent url("./images/features/moldura_macbook.png") bottom
+      center no-repeat;
+    background-size: 100% 100%;
+  }
+
+  .slider-for {
+    margin: 0 auto 37px;
+    height: 100%;
+    max-height: 510px;
+    max-width: 86%;
+    padding-top: 4px;
+    width: 100%;
+
+    & > div {
+      height: 100%;
+      max-height: 510px;
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+      max-width: 100%;
+    }
+  }
+
+  // DOTS
+  .slick-dots {
+    display: block !important;
+    list-style: none;
+    margin-top: 30px;
+    padding: 0;
+
+    li {
+      display: inline-block;
+      margin: 0 8px;
+    }
+
+    .slick-active {
+      button {
+        background: $primary-color;
+      }
+    }
+
+    button {
+      background: #ffffff;
+      border: none;
+      font-size: 0;
+      height: 3px;
+      padding: 0;
+      width: 50px;
+    }
+  }
+}
+
 .advantages {
   padding-top: 100px;
   background: linear-gradient(
