--- a/wp-content/themes/flieber/src/styles/pages/home.scss
+++ b/wp-content/themes/flieber/src/styles/pages/home.scss
@@ -104,7 +104,7 @@ section.feature {
   }
 }
 
-.advantages {
+section.advantages {
   padding-top: 100px;
   background: linear-gradient(
     to top left,
@@ -174,12 +174,214 @@ section.feature {
   }
 }
 
-.marcas {
+section.marcas {
   padding: 100px 0;
 
   .content {
     align-items: center;
     display: flex;
     justify-content: space-around;
+  }
+}
+
+section.depoiments {
+  .container {
+    padding: 0;
+  }
+
+  .content {
+    align-items: center;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    height: 100%;
+  }
+
+  .slider-nav {
+    img {
+      width: 100%;
+    }
+  }
+
+  .slider-for {
+    align-items: center;
+    align-self: stretch;
+    background: #eceef0;
+    display: flex;
+    margin-top: 7%;
+  }
+
+  .depoiments__item {
+    padding: 0 50px;
+    p {
+      color: #858a8f;
+      font-size: 26px;
+      line-height: 34px;
+      margin-bottom: 20px;
+    }
+
+    h3 {
+      color: $secondary-color;
+      font-size: 14px;
+      margin-bottom: 10px;
+    }
+
+    h4 {
+      color: $primary-color;
+      font-size: 15px;
+    }
+  }
+}
+
+section.transports {
+  .container {
+    padding: 0;
+  }
+
+  .content {
+    align-items: center;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    height: 100%;
+  }
+
+  .slider-for {
+    img {
+      width: 100%;
+    }
+  }
+
+  .slider-nav {
+    align-items: center;
+    align-self: stretch;
+    background: rgba(25, 37, 79, 0.3) url("./images/transports/bg.png") center
+      left no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-flow: wrap-reverse;
+  }
+
+  .transports__item {
+    padding: 0 15%;
+    p {
+      color: #babdc3;
+      font-size: 18px;
+      line-height: 34px;
+      margin-bottom: 50px;
+    }
+
+    h3 {
+      color: $secondary-color;
+      font-family: $second-font;
+      font-size: 44px;
+      font-weight: 500;
+      margin-bottom: 30px;
+    }
+
+    button {
+      background: $secondary-color;
+      border: 0;
+      border-radius: 50px;
+      color: $primary-color;
+      display: block;
+      font-size: 16px;
+      font-weight: bold;
+      padding: 10px 40px;
+      text-transform: uppercase;
+    }
+  }
+
+  .slick-dots {
+    align-items: center;
+    border-bottom: 1px solid #535a67;
+    display: flex !important;
+    flex-direction: row;
+    margin-left: 15%;
+    width: 100%;
+
+    li {
+      position: relative;
+    }
+
+    .slick-active {
+      button {
+        color: $secondary-color;
+      }
+
+      &:before {
+        background: $secondary-color;
+        bottom: -1px;
+        content: "";
+        height: 1px;
+        left: 0;
+        position: absolute;
+        width: 100%;
+      }
+    }
+
+    button {
+      background: transparent;
+      border: none;
+      color: #535a67;
+      padding: 15px;
+    }
+  }
+}
+
+section.blog {
+  padding: 70px 0;
+
+  .blog {
+    &__top {
+      align-items: flex-end;
+      display: flex;
+      justify-content: space-between;
+
+      h2 {
+        color: $primary-color;
+        font-family: $second-font;
+        font-size: 28px;
+        font-weight: 500;
+        width: 20%;
+      }
+    }
+
+    &__tabs {
+      border-bottom: 1px solid #e0e1e2;
+      text-align: right;
+      width: 100%;
+      a {
+        color: #858a8f;
+        display: inline-block;
+        padding: 15px;
+        position: relative;
+
+        &.active {
+          color: $primary-color;
+
+          &:before {
+            background: $primary-color;
+            bottom: -1px;
+            content: "";
+            height: 1px;
+            left: 0;
+            position: absolute;
+            width: 100%;
+          }
+        }
+      }
+    }
+
+    &__content {
+      display: grid;
+
+      div {
+        background: red;
+      }
+
+      &.active {
+        display: block;
+      }
+      display: none;
+    }
   }
 }
