--- a/wp-content/themes/flieber/style.css
+++ b/wp-content/themes/flieber/style.css
@@ -705,42 +705,42 @@ section.feature {
       padding: 0;
       width: 50px; }
 
-.advantages {
+section.advantages {
   padding-top: 100px;
   background: -webkit-gradient(linear, right bottom, left top, from(#fff), color-stop(50%, #fff), color-stop(50%, #273042), to(#273042));
   background: linear-gradient(to top left, #fff 0%, #fff 50%, #273042 50%, #273042 100%); }
-  .advantages .container {
+  section.advantages .container {
     max-width: 1200px; }
-  .advantages h2 {
+  section.advantages h2 {
     color: #2ea6d0;
     font-size: 34px; }
-  .advantages .text {
+  section.advantages .text {
     color: #fff;
     font-size: 20px;
     line-height: 32px;
     margin-bottom: 55px;
     max-width: 55%; }
-  .advantages .content {
+  section.advantages .content {
     -webkit-box-align: stretch;
             align-items: stretch;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 50px; }
-  .advantages .box {
+  section.advantages .box {
     background: #fff;
     box-shadow: 0px 50px 35px -25px rgba(0, 0, 0, 0.5);
     padding: 30px 35px;
     text-align: center; }
-    .advantages .box img {
+    section.advantages .box img {
       margin-bottom: 15px; }
-    .advantages .box h3 {
+    section.advantages .box h3 {
       color: #2ea6d0;
       font-size: 36px;
       margin-bottom: 15px; }
-    .advantages .box p {
+    section.advantages .box p {
       color: #858a8f;
       font-size: 20px; }
-  .advantages .button {
+  section.advantages .button {
     background: #19254f;
     border-radius: 50px;
     color: #fff;
@@ -752,14 +752,175 @@ section.feature {
     padding: 20px 40px;
     text-transform: uppercase; }
 
-.marcas {
+section.marcas {
   padding: 100px 0; }
-  .marcas .content {
+  section.marcas .content {
     -webkit-box-align: center;
             align-items: center;
     display: -webkit-box;
     -js-display: flex;
     display: flex;
     justify-content: space-around; }
+
+section.depoiments .container {
+  padding: 0; }
+
+section.depoiments .content {
+  -webkit-box-align: center;
+          align-items: center;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  height: 100%; }
+
+section.depoiments .slider-nav img {
+  width: 100%; }
+
+section.depoiments .slider-for {
+  -webkit-box-align: center;
+          align-items: center;
+  align-self: stretch;
+  background: #eceef0;
+  display: -webkit-box;
+  -js-display: flex;
+  display: flex;
+  margin-top: 7%; }
+
+section.depoiments .depoiments__item {
+  padding: 0 50px; }
+  section.depoiments .depoiments__item p {
+    color: #858a8f;
+    font-size: 26px;
+    line-height: 34px;
+    margin-bottom: 20px; }
+  section.depoiments .depoiments__item h3 {
+    color: #2ea6d0;
+    font-size: 14px;
+    margin-bottom: 10px; }
+  section.depoiments .depoiments__item h4 {
+    color: #19254f;
+    font-size: 15px; }
+
+section.transports .container {
+  padding: 0; }
+
+section.transports .content {
+  -webkit-box-align: center;
+          align-items: center;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  height: 100%; }
+
+section.transports .slider-for img {
+  width: 100%; }
+
+section.transports .slider-nav {
+  -webkit-box-align: center;
+          align-items: center;
+  align-self: stretch;
+  background: rgba(25, 37, 79, 0.3) url("./images/transports/bg.png") center left no-repeat;
+  background-size: cover;
+  display: -webkit-box;
+  -js-display: flex;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+          flex-flow: wrap-reverse; }
+
+section.transports .transports__item {
+  padding: 0 15%; }
+  section.transports .transports__item p {
+    color: #babdc3;
+    font-size: 18px;
+    line-height: 34px;
+    margin-bottom: 50px; }
+  section.transports .transports__item h3 {
+    color: #2ea6d0;
+    font-family: "Keep Calm Med", "Helvetica Neue", Arial, sans-serif;
+    font-size: 44px;
+    font-weight: 500;
+    margin-bottom: 30px; }
+  section.transports .transports__item button {
+    background: #2ea6d0;
+    border: 0;
+    border-radius: 50px;
+    color: #19254f;
+    display: block;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 10px 40px;
+    text-transform: uppercase; }
+
+section.transports .slick-dots {
+  -webkit-box-align: center;
+          align-items: center;
+  border-bottom: 1px solid #535a67;
+  display: -webkit-box !important;
+  -js-display: flex !important;
+  display: flex !important;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+          flex-direction: row;
+  margin-left: 15%;
+  width: 100%; }
+  section.transports .slick-dots li {
+    position: relative; }
+  section.transports .slick-dots .slick-active button {
+    color: #2ea6d0; }
+  section.transports .slick-dots .slick-active:before {
+    background: #2ea6d0;
+    bottom: -1px;
+    content: "";
+    height: 1px;
+    left: 0;
+    position: absolute;
+    width: 100%; }
+  section.transports .slick-dots button {
+    background: transparent;
+    border: none;
+    color: #535a67;
+    padding: 15px; }
+
+section.blog {
+  padding: 70px 0; }
+  section.blog .blog__top {
+    -webkit-box-align: end;
+            align-items: flex-end;
+    display: -webkit-box;
+    -js-display: flex;
+    display: flex;
+    -webkit-box-pack: justify;
+            justify-content: space-between; }
+    section.blog .blog__top h2 {
+      color: #19254f;
+      font-family: "Keep Calm Med", "Helvetica Neue", Arial, sans-serif;
+      font-size: 28px;
+      font-weight: 500;
+      width: 20%; }
+  section.blog .blog__tabs {
+    border-bottom: 1px solid #e0e1e2;
+    text-align: right;
+    width: 100%; }
+    section.blog .blog__tabs a {
+      color: #858a8f;
+      display: inline-block;
+      padding: 15px;
+      position: relative; }
+      section.blog .blog__tabs a.active {
+        color: #19254f; }
+        section.blog .blog__tabs a.active:before {
+          background: #19254f;
+          bottom: -1px;
+          content: "";
+          height: 1px;
+          left: 0;
+          position: absolute;
+          width: 100%; }
+  section.blog .blog__content {
+    display: grid;
+    display: none; }
+    section.blog .blog__content div {
+      background: red; }
+    section.blog .blog__content.active {
+      display: block; }
 
 /*# sourceMappingURL=style.css.map */
