init page pricing / contact form

--- a/wp-content/themes/flieber/src/styles/style.scss
+++ b/wp-content/themes/flieber/src/styles/style.scss
@@ -9,9 +9,11 @@
 @import "./components/footer";
 @import "./components/tabs";
 @import "./components/related-widget";
+@import "./components/contact-form";
 
 @import "./pages/home";
 @import "./pages/resources";
 @import "./pages/post";
 @import "./pages/our-vision";
 @import "./pages/our-solution";
+@import "./pages/pricing";
