--- a/wp-content/themes/flieber/src/styles/components/contact-form.scss
+++ b/wp-content/themes/flieber/src/styles/components/contact-form.scss
@@ -24,7 +24,7 @@
     color: #fff;
     font-size: 16px;
     padding: 12px 0;
-    width: 100%;
+    width: 100% !important;
 
     &::placeholder {
       color: #5a6375;
@@ -74,5 +74,9 @@
     border: none;
     color: #fff;
     padding: 0;
+  }
+
+  .wpcf7 .screen-reader-response {
+    display: none !important;
   }
 }
