--- a/wp-content/themes/flieber/src/styles/pages/pricing.scss
+++ b/wp-content/themes/flieber/src/styles/pages/pricing.scss
@@ -1,5 +1,7 @@
 @charset 'UTF-8';
 
+@import "../components/contact-form";
+
 .page-template-pricing {
   header:not(.fixed) {
     nav {
@@ -148,6 +150,71 @@
         height: 3px;
         padding: 0;
         width: 50px;
+      }
+    }
+  }
+
+  .contact-form {
+    background: transparent;
+    margin-top: 100px;
+    position: relative;
+    z-index: 1;
+
+    .slide {
+      &__header {
+        border-bottom: 1px solid #c8c8c8;
+        color: $secondary-color;
+        cursor: pointer;
+        font-family: $second-font;
+        padding-bottom: 15px;
+        position: relative;
+
+        &:before {
+          background: transparent url("./images/arrow.svg") center no-repeat;
+          content: "";
+          height: 20px;
+          position: absolute;
+          right: 0;
+          top: 0;
+          transition: all 0.1s ease-in-out;
+          transform: rotate(180deg);
+          width: 20px;
+        }
+
+        &.active {
+          &:before {
+            transform: rotate(0);
+          }
+        }
+      }
+
+      &__content {
+        .wpcf7-form-control.wpcf7-radio {
+          display: flex;
+          flex-direction: column;
+          padding-left: 20px;
+        }
+
+        .wpcf7-list-item {
+          margin: 15px 0;
+        }
+
+        label {
+          display: flex;
+          align-items: center;
+          justify-content: flex-start;
+          flex-direction: row;
+
+          input {
+            margin-right: 10px;
+            width: auto !important;
+          }
+
+          span {
+            color: #5a6375;
+            text-decoration: underline;
+          }
+        }
       }
     }
   }
