px to rem / ajustes container

--- a/wp-content/themes/flieber/src/styles/base/global.scss
+++ b/wp-content/themes/flieber/src/styles/base/global.scss
@@ -2,6 +2,7 @@
 
 @import "normalize.css/normalize";
 @import "./fonts";
+@import "./px-to-rem";
 
 $primary-color: #19254f;
 $secondary-color: #2ea6d0;
