--- a/wp-content/themes/flieber/src/styles/base/responsive.scss
+++ b/wp-content/themes/flieber/src/styles/base/responsive.scss
@@ -3,6 +3,7 @@ $phone: 576px;
 $tablet: 768px;
 $desktop: 992px;
 $lg-desktop: 1200px;
+$widescreen: 1370px;
 
 @mixin phone {
   @media (min-width: 320px) and (max-width: #{$tablet}) {
@@ -23,7 +24,13 @@ $lg-desktop: 1200px;
 }
 
 @mixin lg-desktop {
-  @media (min-width: #{$lg-desktop}) {
+  @media (min-width: #{$lg-desktop}) and (max-width: #{$widescreen}) {
+    @content;
+  }
+}
+
+@mixin widescreen {
+  @media (min-width: #{$widescreen}) {
     @content;
   }
 }
