--- a/wp-content/themes/flieber/src/styles/components/container.scss
+++ b/wp-content/themes/flieber/src/styles/components/container.scss
@@ -1,6 +1,10 @@
 .container {
   margin: 0 auto;
-  max-width: 1740px;
-  padding: 0 10px;
+  max-width: size(1740);
+  padding: 0 size(30);
   width: 100%;
+
+  @include widescreen {
+    max-width: size(1920, 14);
+  }
 }
