--- a/wp-content/themes/flieber/src/styles/components/header.scss
+++ b/wp-content/themes/flieber/src/styles/components/header.scss
@@ -1,7 +1,7 @@
 @charset 'UTF-8';
 
 header {
-  padding: 15px 0;
+  padding: size(15) 0;
   position: fixed;
   transition: background 0.3s ease-in-out;
   width: 100%;
@@ -18,10 +18,10 @@ header {
   }
 
   .logo {
-    width: 200px;
+    width: size(200);
 
     @include phone {
-      width: 100px;
+      width: size(100);
     }
 
     img {
@@ -43,22 +43,26 @@ header {
     }
 
     li {
-      margin: 0 25px;
+      margin: 0 size(25);
+
+      &:last-child {
+        margin: 0;
+      }
     }
 
     a {
       color: $primary-color;
-      font-size: 18px;
+      font-size: size(18);
 
       &.feature {
         background: $primary-color;
         border-radius: 50px;
         color: #fff !important;
         display: block;
-        font-size: 18px;
+        font-size: size(18);
         font-weight: bold;
-        line-height: 18px;
-        padding: 20px 40px;
+        line-height: size(18);
+        padding: size(10) size(25);
         text-transform: uppercase;
       }
 
