--- a/wp-content/themes/flieber/src/styles/pages/post.scss
+++ b/wp-content/themes/flieber/src/styles/pages/post.scss
@@ -180,6 +180,37 @@
     position: relative;
     z-index: 1;
 
+    color: #858a8f;
+
+    .info-title {
+      color: #1abdde;
+    }
+
+    .block-left .wp-block-media-text__content {
+      padding: 0 0 0 8% !important;
+    }
+
+    .block-right .wp-block-media-text__content {
+      padding: 0 8% 0 0 !important;
+    }
+
+    .wp-block-media-text__content p {
+      text-align: justify !important;
+    }
+
+    .image-title {
+      color: #1abdde;
+    }
+
+    ul {
+      list-style: initial;
+      padding-inline-start: 40px;
+    }
+
+    .wp-block-gallery {
+      padding-inline-start: 0px;
+    }
+
     @include phone {
       grid-template-columns: 100%;
     }
