--- a/wp-content/themes/flieber/src/styles/components/cards.scss
+++ b/wp-content/themes/flieber/src/styles/components/cards.scss
@@ -52,8 +52,11 @@ section#why {
     }
 
     &__icon {
-      margin: 0 auto;
-      padding: 0 0 45px 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 127px;
+      margin: 0 0 45px 0;
     }
 
     &__title {
