--- a/wp-content/themes/flieber/src/styles/pages/our-solution.scss
+++ b/wp-content/themes/flieber/src/styles/pages/our-solution.scss
@@ -19,6 +19,76 @@
     }
   }
 
+  main {
+    position: relative;
+
+    .image__plx {
+      background-color: transparent;
+      height: 30%;
+      position: absolute;
+      width: 100%;
+
+      @include lg-desktop() {
+        height: 130vh;
+      }
+
+      @include phone {
+        height: 100vh;
+      }
+
+      .blue {
+        background: linear-gradient(
+          to top right,
+          transparent 0%,
+          transparent 50%,
+          $secondary-color 50%,
+          $secondary-color 100%
+        );
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 60%;
+        height: 70%;
+        z-index: 2;
+
+        @include phone {
+          display: none;
+        }
+      }
+
+      .white {
+        background: linear-gradient(
+          to bottom right,
+          transparent 0%,
+          transparent 50%,
+          #ffffff 50%,
+          #ffffff 100%
+        );
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        height: 65%;
+        z-index: 1;
+
+        @include phone {
+          display: none;
+        }
+      }
+
+      .dark {
+        background: transparent url("./images/BG_solution.jpg") center left
+          no-repeat;
+        background-attachment: fixed;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+
   // CONTENT ==================================
   section#content {
     position: relative;
@@ -64,7 +134,7 @@
       &__brand {
         max-width: 85%;
         margin: 0 auto;
-        padding: 250px 0 60px 0;
+        padding: 10% 0 60px 0;
 
         @include phone {
           max-width: 90%;
@@ -171,6 +241,9 @@
   #option {
     align-items: center;
     display: flex;
+
+    position: relative;
+    z-index: 1;
 
     @include phone {
       flex-direction: column;
