--- a/wp-content/themes/flieber/src/styles/pages/our-vision.scss
+++ b/wp-content/themes/flieber/src/styles/pages/our-vision.scss
@@ -19,18 +19,85 @@
     }
   }
 
+  main {
+    position: relative;
+
+    .image__plx {
+      background-color: #343f53;
+      height: 18%;
+      position: absolute;
+      width: 100%;
+
+      @include phone {
+        height: 100vh;
+      }
+
+      .blue {
+        background: linear-gradient(
+          to top right,
+          transparent 0%,
+          transparent 50%,
+          $secondary-color 50%,
+          $secondary-color 100%
+        );
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 60%;
+        height: 70%;
+        z-index: 2;
+
+        @include phone {
+          display: none;
+        }
+      }
+
+      .white {
+        background: linear-gradient(
+          to bottom right,
+          transparent 0%,
+          transparent 50%,
+          #ffffff 50%,
+          #ffffff 100%
+        );
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        height: 65%;
+        z-index: 1;
+
+        @include phone {
+          display: none;
+        }
+      }
+
+      .dark {
+        background: transparent url("./images/BG_Globo_vision.jpg") center left
+          no-repeat;
+        background-attachment: fixed;
+        background-size: contain;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+
   // CONTENT ==================================
   section#content {
     position: relative;
     z-index: 1;
-    .image {
-      background: url("./images/our-vision/bg-top.png") center center no-repeat;
-      height: 3626px;
-      position: absolute;
-      top: 0;
-      width: 100%;
-      z-index: -1;
-    }
+    // .image {
+    //   background: url("./images/our-vision/bg-top.png") center center no-repeat;
+    //   height: 3626px;
+    //   position: absolute;
+    //   top: 0;
+    //   width: 100%;
+    //   z-index: -1;
+    // }
 
     h1 {
       color: $secondary-color;
